toevoegen simpele html signin pagina

--- a/views/login.pug
+++ b/views/login.pug
@@ -6,8 +6,10 @@ html(lang='en')
   body
     h1 login
     form(action='', method='post')
-      input#username(type='text', name='username', placeholder='username')
+      input#email(type='text', name='email', placeholder='email')
       br
       input#password(type='password', name='password', placeholder='password')
+      br
+      button login
     h3 Nog geen account?
     a(href='signin') sign in
