sass stylesheets voor alle huidige schermen

--- a/views/signin.pug
+++ b/views/signin.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
   head
     meta(charset='UTF-8')
+    link(rel='stylesheet', href='/dist/stylesheets/signin.css')
     title test
   body
     h1 registratie
