--- a/views/login.pug
+++ b/views/login.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang='en')
   head
     meta(charset='UTF-8')
+    link(rel='stylesheet', href='/dist/stylesheets/login.css')
     title test
   body
     h1 login
