routes in apparte bestanden gezet

--- a/views/login.pug
+++ b/views/login.pug
@@ -13,4 +13,4 @@ html(lang='en')
       br
       button.form__submit login
     h3 Nog geen account?
-    a(href='signin') sign in
+    a(href='login/register') sign in
