--- a/views/register.pug
+++ b/views/register.pug
@@ -19,4 +19,4 @@ html(lang='en')
       br
       button.form__submit registreer
     h3 Heeft u al een account?
-    a(href='login') login
+    a(href='../login') login
